# app-rating-competition

./: .gitignore  Attempt1.ipynb  Attempt2.ipynb  Attempt3.ipynb  Data Exploration.ipynb  Error Analysis.ipynb  OutlierCapper.py  Pipeline & Predictions.ipynb  README.md  cleaned_cat_df2.csv  cleaned_num_df.csv  cleaned_num_df2.csv  cleaned_train_df2.csv  extracted_test_rows_with_Y.csv  preprocess_app_name.py  preprocessing.py  pyproject.toml  stacked_nlp_try2.csv  train_rows_from_full.csv  try_preprocessing.ipynb  utils.py
app-rating-competition/: test.csv
data/: cleaned_train_only_dropped_y.csv  first_combined_df.csv
data/app-rating-competition/: SampleSubmission.csv  test.csv  train.csv
other_notebooks/: 100-accuracy-in-predicting-app-store-reviews.ipynb  99-8-play-store-dataset-analysis-prediction.ipynb  google-play-store-eda-rating-prediction.ipynb  machine-learning-model-to-predict-app-rating-94.ipynb
philo_submissions/: FINALFORTODAY.csv  TRYINF.csv  second.csv  ss.csv  third.csv
submissions/: TRYINF.csv  cleaned_cat_df.csv  cleaned_train_df.csv  lgb_nlp_try.csv  lgb_nlp_try2.csv  lgb_try.csv  one_try.csv  stacked_nlp_try1.csv  submission.csv  submission2.csv  submission23.csv  submission24.csv  submission25.csv  submission26.csv  submission28.csv  submission_lgb_stacked.csv  submission_lgb_stacked2.csv  submission_lgb_stacked5.csv  submission_xgb_stacked.csv  submission_xgb_stacked23.csv
submissions/philo_submissions/: app_rating_prediction_submission (1).csv  app_rating_prediction_submission2.csv  submission 24.csv  submission_catboost_cpu_best.csv
