[project]
name = "apprating"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cleanlab[datalab]>=2.7.1",
    "holidays>=0.70",
    "kaggle>=1.7.4.2",
    "matplotlib>=3.10.1",
    "notebook>=7.4.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "xgboost>=3.0.0",
]
