[project]
name = "apprating"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.13"
dependencies = [
    "catboost>=1.2.8",
    "cleanlab[datalab]>=2.7.1",
    "emoji>=2.14.1",
    "holidays>=0.70",
    "ipywidgets>=8.1.7",
    "kaggle>=1.7.4.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "notebook>=7.4.0",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.5",
    "statsmodels>=0.14.4",
    "unidecode>=1.4.0",
    "xgboost>=3.0.0",
]
